edited github action workflow  to work

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          corepack enable
-          npm install
+          npm ci
 
       - name: Build project
         run: npm run build
