--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,52 @@
-dist/
+# .gitignore
+
+# Node modules
 node_modules/
-bun.lockb 
+
+# Build output 
+dist/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Keep for now in main branch
+# package-lock.json  
+
+# Vite cache
+.vite/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# ESLint cache
+.eslintcache
+
+# Prettier cache 
+.prettier-cache/
+
+# VSCode settings
+.vscode/
+
+# System files
+.DS_Store
+Thumbs.db
+
+# macOS metadata in case
+.AppleDouble
+.LSOverride
+
+# env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Leftover just in case
+bun.lockb
+
+# shadcn ui cache: Keep for now
+# components.json
