--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@react-three/drei": "^8.10.1",
+    "@react-three/fiber": "^8.0.27",
     "@tanstack/react-query": "^5.56.2",
+    "@types/three": "^0.177.0",
     "bun": "^1.2.15",
     "caniuse-lite": "^1.0.30001721",
     "class-variance-authority": "^0.7.1",
@@ -66,6 +69,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.142.0",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
@@ -73,8 +77,8 @@
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.5.5",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
