--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@react-three/drei": "^8.10.1",
     "@react-three/fiber": "^8.0.27",
     "@tanstack/react-query": "^5.56.2",
     "@types/three": "^0.177.0",
@@ -63,6 +62,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.5.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
