--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@react-three/fiber": "^8.0.27",
+    "@react-three/drei": "^9.56.15",
+    "@react-three/fiber": "^8.13.7",
     "@tanstack/react-query": "^5.56.2",
     "@types/three": "^0.177.0",
     "bun": "^1.2.15",
