--- a/.github/workflows/publish_redirect.yml
+++ b/.github/workflows/publish_redirect.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 permissions:
-  contents: write
+  contents: write  # ensures GitHub Actions can push to gh-pages
 
 jobs:
   # --- Cloudflare Build/Deploy ---
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build project
         run: npm run build
-  
+
   # --- GitHub Pages Redirect ---
   redirect-gh-pages:
     runs-on: ubuntu-latest
@@ -34,7 +34,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Create redirect index.html
+      - name: Create redirect index.html with cache-busting
         run: |
           mkdir out
           cat > out/index.html <<'HTML'
@@ -43,6 +43,9 @@ jobs:
           <head>
             <meta charset="utf-8" />
             <meta http-equiv="refresh" content="0; url=https://tylermitton.com/" />
+            <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
+            <meta http-equiv="expires" content="0" />
+            <meta http-equiv="pragma" content="no-cache" />
             <meta name="robots" content="noindex" />
             <link rel="canonical" href="https://tylermitton.com/" />
             <title>Redirecting…</title>
