--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,46 @@
-name: Deploy to GitHub Pages
+# name: Deploy to GitHub Pages
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# permissions:
+#   contents: write
+
+# jobs:
+#   build-and-deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+#         with:
+#           fetch-depth: 0
+
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: '22'
+
+#       - name: Install dependencies
+#         run: npm ci
+
+#       - name: Build project for gh-pages
+#         run: npm run build -- --mode github
+
+#       - name: Copy 404 fallback
+#         run: cp dist/index.html dist/404.html
+
+#       - name: Deploy to GitHub Pages
+#         uses: peaceiris/actions-gh-pages@v4
+#         with:
+#           github_token: ${{ secrets.GITHUB_TOKEN }}
+#           publish_dir: ./dist
+#           force_orphan: true
+#           cname: tylermitton.com
+
+name: Deploy to GitHub Pages (two sites)
 
 on:
   push:
@@ -11,7 +53,6 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -26,16 +67,32 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build project for gh-pages
+      # --- Build for GitHub Pages (project site) ---
+      - name: Build for project site
         run: npm run build -- --mode github
-
       - name: Copy 404 fallback
         run: cp dist/index.html dist/404.html
+      - name: Deploy to gh-pages branch
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+          force_orphan: true
+          cname: fireflame135.github.io
+          publish_branch: gh-pages
 
-      - name: Deploy to GitHub Pages
+      # --- Build for custom domain (root site) ---
+      - name: Clean dist
+        run: rm -rf dist
+      - name: Build for custom domain
+        run: npm run build
+      - name: Copy 404 fallback
+        run: cp dist/index.html dist/404.html
+      - name: Deploy to gh-pages-root branch
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           force_orphan: true
           cname: tylermitton.com
+          publish_branch: gh-pages-root
