--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 permissions:
-  contents: write  # 👈 REQUIRED for pushing to gh-pages
+  contents: write
 
 jobs:
   build-and-deploy:
@@ -26,8 +26,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build project for gh-pages
-        run: npm run build -- --mode github
+      - name: Build project
+        run: npm run build
 
       - name: Copy 404 fallback
         run: cp dist/index.html dist/404.html
